@@ -59,18 +59,18 @@ public final class GetTimeZoneInfo implements Function {
 		int minutes = j % 60;
 
 		Struct struct = new StructImpl();
-		struct.setEL("utcTotalOffset", new Double(total));
-		struct.setEL("utcHourOffset", new Double(hour));
-		struct.setEL("utcMinuteOffset", new Double(minutes));
+		struct.setEL("utcTotalOffset", Double.valueOf(total));
+		struct.setEL("utcHourOffset", Double.valueOf(hour));
+		struct.setEL("utcMinuteOffset", Double.valueOf(minutes));
 		struct.setEL("isDSTon", (dstOffset > 0) ? Boolean.TRUE : Boolean.FALSE);
 		struct.setEL(KeyConstants._name, tz.getDisplayName(dspLocale));
 		struct.setEL("nameDST", tz.getDisplayName(Boolean.TRUE, TimeZone.LONG, dspLocale));
 		struct.setEL(KeyConstants._shortName, tz.getDisplayName(Boolean.FALSE, TimeZone.SHORT, dspLocale));
 		struct.setEL("shortNameDST", tz.getDisplayName(Boolean.TRUE, TimeZone.SHORT, dspLocale));
 		struct.setEL(KeyConstants._id, tz.getID());
-		struct.setEL(KeyConstants._timezone, tz.getID()); 
-		struct.setEL(KeyConstants._offset, new Double(-total));
-		struct.setEL("DSTOffset", new Double(dstOffset / 1000));
+		struct.setEL(KeyConstants._timezone, tz.getID());
+		struct.setEL(KeyConstants._offset, Double.valueOf(-total));
+		struct.setEL("DSTOffset", Double.valueOf(dstOffset / 1000));
 
 		return struct;
 
