@@ -20,8 +20,6 @@ package lucee.runtime.tag;
 
 import java.io.ByteArrayInputStream;
 import java.io.EOFException;
-import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
@@ -35,7 +33,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
-import java.util.concurrent.TimeUnit;
 import java.util.zip.GZIPInputStream;
 
 import org.apache.http.HttpEntityEnclosingRequest;
@@ -92,6 +89,7 @@ import lucee.runtime.cache.tag.http.HTTPCacheItem;
 import lucee.runtime.config.Config;
 import lucee.runtime.config.ConfigWeb;
 import lucee.runtime.config.Constants;
+import lucee.runtime.engine.ThreadLocalPageContext;
 import lucee.runtime.exp.ApplicationException;
 import lucee.runtime.exp.ExpressionException;
 import lucee.runtime.exp.HTTPException;
@@ -189,6 +187,7 @@ public final class Http extends BodyTagImpl {
 	private static final Key EXPLANATION = KeyImpl.getInstance("explanation");
 	private static final Key RESPONSEHEADER = KeyImpl.getInstance("responseheader");
 	private static final Key SET_COOKIE = KeyImpl.getInstance("set-cookie");
+	private static final Key ERROR = KeyImpl.getInstance("error");
 
 	private static final short AUTH_TYPE_BASIC = 0;
 	private static final short AUTH_TYPE_NTLM = 1;
@@ -305,6 +304,7 @@ public final class Http extends BodyTagImpl {
 	private String result = "cfhttp";
 
 	private boolean addtoken = false;
+	private boolean encode = true;
 
 	private short authType = AUTH_TYPE_BASIC;
 	private String workStation = null;
@@ -356,6 +356,7 @@ public final class Http extends BodyTagImpl {
 		multiPartType = MULTIPART_FORM_DATA;
 		result = "cfhttp";
 		addtoken = false;
+		encode = true;
 
 		authType = AUTH_TYPE_BASIC;
 		workStation = null;
@@ -618,16 +619,15 @@ public final class Http extends BodyTagImpl {
 	public void setMethod(String method) throws ApplicationException {
 		method = method.toUpperCase().trim();
 		short idx = (short) methods.indexOf(method);
-		if (idx < 0) throw new ApplicationException("invalid method type [" + method + "], valid types are [" + methods.toString() + "]");
+		if (idx < 0) throw new ApplicationException("invalid method type [" + method + "], valid types are [" + ListUtil.arrayToList(methods.toArray(new String[0]), ",") + "]");
 		this.method = idx;
 	}
 
 	private static String getMethodAsVerb(short method) throws ApplicationException {
-		if (method < 0 || method > methods.size() - 1) throw new ApplicationException("invalid method [" + method + "], valid types are [" + methods.toString() + "]"); // never
-																																										// will
-																																										// reach
-																																										// this, due
-																																										// to above
+		if (method < 0 || method > methods.size() - 1)
+			throw new ApplicationException("invalid method [" + method + "], valid types are [" + ListUtil.arrayToList(methods.toArray(new String[0]), ",") + "]"); // never will
+																																									// reach this,
+																																									// due to above
 
 		return methods.get(method);
 	}
@@ -646,7 +646,6 @@ public final class Http extends BodyTagImpl {
 		if (StringUtil.isEmpty(cachedwithin)) return;
 		this.cachedWithin = cachedwithin;
 	}
-
 
 	public void setPooling(boolean usePool) {
 		this.usePool = usePool;
@@ -697,7 +696,7 @@ public final class Http extends BodyTagImpl {
 		boolean safeToMemory = !StringUtil.isEmpty(result, true);
 
 		HttpClientBuilder builder = HTTPEngine4Impl.getHttpClientBuilder();
-		HTTPEngine4Impl.setConnectionManager(builder, this.usePool,  this.clientCert, this.clientCertPassword);
+		HTTPEngine4Impl.setConnectionManager(builder, this.usePool, this.clientCert, this.clientCertPassword);
 
 		// redirect
 		if (redirect) builder.setRedirectStrategy(DefaultRedirectStrategy.INSTANCE);
@@ -1093,6 +1092,7 @@ public final class Http extends BodyTagImpl {
 					if (!throwonerror) {
 						if (t instanceof SocketTimeoutException) setRequestTimeout(cfhttp);
 						else setUnknownHost(cfhttp, t);
+						logHttpRequest(pageContext, cfhttp, url, req.getMethod(), System.nanoTime() - start, false);
 						return;
 					}
 					throw toPageException(t, rsp);
@@ -1112,6 +1112,7 @@ public final class Http extends BodyTagImpl {
 				if (e.t != null) {
 					if (!throwonerror) {
 						setUnknownHost(cfhttp, e.t);
+						logHttpRequest(pageContext, cfhttp, url, req.getMethod(), System.nanoTime() - start, false);
 						return;
 					}
 					throw toPageException(e.t, rsp);
@@ -1123,6 +1124,7 @@ public final class Http extends BodyTagImpl {
 					req.abort();
 					if (throwonerror) throw new HTTPException("408 Request Time-out", "a timeout occurred in tag http", 408, "Time-out", rsp == null ? null : rsp.getURL());
 					setRequestTimeout(cfhttp);
+					logHttpRequest(pageContext, cfhttp, url, req.getMethod(), System.nanoTime() - start, false);
 					return;
 					// throw new ApplicationException("timeout");
 				}
@@ -1130,16 +1132,16 @@ public final class Http extends BodyTagImpl {
 
 			/////////////////////////////////////////// EXECUTE
 			/////////////////////////////////////////// /////////////////////////////////////////////////
-			Charset responseCharset = CharsetUtil.toCharset(rsp.getCharset());
 			int statCode = 0;
 			// Write Response Scope
 			// String rawHeader=httpMethod.getStatusLine().toString();
 			String mimetype = null;
 			String contentEncoding = null;
+			String rspCharset = null;
 
 			// status code
 			cfhttp.set(STATUSCODE, ((rsp.getStatusCode() + " " + rsp.getStatusText()).trim()));
-			cfhttp.set(STATUS_CODE, new Double(statCode = rsp.getStatusCode()));
+			cfhttp.set(STATUS_CODE, Double.valueOf(statCode = rsp.getStatusCode()));
 			cfhttp.set(STATUS_TEXT, (rsp.getStatusText()));
 			cfhttp.set(HTTP_VERSION, (rsp.getProtocolVersion()));
 			Array locations = rsp.getLocations();
@@ -1192,9 +1194,14 @@ public final class Http extends BodyTagImpl {
 				}
 
 			}
+
+			String[] tmpCharset = HTTPUtil.splitMimeTypeAndCharset(mimetype, null);
+			rspCharset = tmpCharset != null ? tmpCharset[1] : null;
+
+			cfhttp.set(ERROR, Boolean.FALSE); // default
 			cfhttp.set(RESPONSEHEADER, responseHeader);
 			cfhttp.set(KeyConstants._cookies, cookies);
-			responseHeader.set(STATUS_CODE, new Double(statCode = rsp.getStatusCode()));
+			responseHeader.set(STATUS_CODE, Double.valueOf(statCode = rsp.getStatusCode()));
 			responseHeader.set(EXPLANATION, (rsp.getStatusText()));
 			if (setCookie.size() > 0) responseHeader.set(SET_COOKIE, setCookie);
 
@@ -1232,12 +1239,14 @@ public final class Http extends BodyTagImpl {
 				if (Boolean.TRUE == _isText) {
 					String[] types = HTTPUtil.splitMimeTypeAndCharset(mimetype, null);
 					if (types[0] != null) cfhttp.set(KeyConstants._mimetype, types[0]);
-					if (types[1] != null) cfhttp.set(CHARSET, types[1]);
-
+					if (types[1] != null) rspCharset = types[1]; // only text types have charset
 				}
 				else cfhttp.set(KeyConstants._mimetype, mimetype);
 			}
 			else cfhttp.set(KeyConstants._mimetype, NO_MIMETYPE);
+
+			// charset
+			cfhttp.set(CHARSET, rspCharset != null ? rspCharset : "");
 
 			// File
 			Resource file = null;
@@ -1262,10 +1271,14 @@ public final class Http extends BodyTagImpl {
 			// filecontent
 
 			if (Boolean.TRUE == _isText && getAsBinary != GET_AS_BINARY_YES && safeToMemory) {
+				String tmp = rsp.getCharset();
+				Charset responseCharset = StringUtil.isEmpty(tmp, true) ? null : CharsetUtil.toCharset(tmp);
 				// store to memory
 				String str;
-				if (barr == null) str = contentAsString(rsp, responseCharset, contentEncoding, e);
-				else str = IOUtil.toString(barr, responseCharset);
+
+				Charset cs = (StringUtil.isEmpty(charset)) ? responseCharset : CharsetUtil.toCharset(charset, responseCharset);
+				if (barr == null) str = contentAsString(rsp, cs, contentEncoding, e);
+				else str = IOUtil.toString(barr, cs);
 				cfhttp.set(KeyConstants._filecontent, str);
 
 				// store to file
@@ -1312,8 +1325,11 @@ public final class Http extends BodyTagImpl {
 				String msg = rsp.getStatusCode() + " " + rsp.getStatusText();
 				cfhttp.setEL(ERROR_DETAIL, msg);
 				if (throwonerror) {
-					throw new HTTPException(msg, null, rsp.getStatusCode(), rsp.getStatusText(), rsp.getURL());
+					URL url = rsp.getURL();
+					String details = getMethodAsVerb(method) + " " + url.toExternalForm();
+					throw new HTTPException(msg, details, rsp.getStatusCode(), rsp.getStatusText(), url);
 				}
+				cfhttp.setEL(ERROR, Boolean.TRUE);
 			}
 
 			// TODO: check if we can use statCode instead of rsp.getStatusCode() everywhere and cleanup the code
@@ -1419,13 +1435,7 @@ public final class Http extends BodyTagImpl {
 			throw Caster.toPageException(ioe);
 		}
 		finally {
-			try {
-				IOUtil.close(is);
-			}
-			catch (IOException ioe) {
-				throw Caster.toPageException(ioe);
-
-			}
+			IOUtil.closeEL(is);
 		}
 
 		if (str == null) str = "";
@@ -1538,7 +1548,7 @@ public final class Http extends BodyTagImpl {
 			he.setStackTrace(traces);
 			return he;
 		}
-		PageException pe = Caster.toPageException(t);
+		PageException pe = Caster.toPageException(new Exception(t));
 		if (pe instanceof NativeException) {
 			((NativeException) pe).setAdditional(KeyConstants._url, url);
 		}
@@ -1553,9 +1563,10 @@ public final class Http extends BodyTagImpl {
 		cfhttp.setEL(KeyConstants._mimetype, "Unable to determine MIME type of file.");
 		cfhttp.setEL(RESPONSEHEADER, new StructImpl());
 		cfhttp.setEL(STATUSCODE, "Connection Failure. Status code unavailable.");
-		cfhttp.setEL(STATUS_CODE, new Double(0));
+		cfhttp.setEL(STATUS_CODE, Double.valueOf(0));
 		cfhttp.setEL(STATUS_TEXT, "Connection Failure");
 		cfhttp.setEL(KeyConstants._text, Boolean.TRUE);
+		cfhttp.setEL(ERROR, Boolean.TRUE);
 	}
 
 	private void setRequestTimeout(Struct cfhttp) {
@@ -1566,9 +1577,10 @@ public final class Http extends BodyTagImpl {
 		cfhttp.setEL(KeyConstants._mimetype, "Unable to determine MIME type of file.");
 		cfhttp.setEL(RESPONSEHEADER, new StructImpl());
 		cfhttp.setEL(STATUSCODE, "408 Request Time-out");
-		cfhttp.setEL(STATUS_CODE, new Double(408));
+		cfhttp.setEL(STATUS_CODE, Double.valueOf(408));
 		cfhttp.setEL(STATUS_TEXT, "Request Time-out");
 		cfhttp.setEL(KeyConstants._text, Boolean.TRUE);
+		cfhttp.setEL(ERROR, Boolean.TRUE);
 	}
 
 	private static boolean hasHeaderIgnoreCase(HttpRequestBase req, String name) {
@@ -1611,9 +1623,9 @@ public final class Http extends BodyTagImpl {
 	}
 
 	private static void logHttpRequest(PageContext pc, Struct data, String url, String method, long executionTimeNS, boolean cached) throws PageException {
-		Log log = pc.getConfig().getLog("trace");
-		if (log != null && log.getLogLevel() <= Log.LEVEL_INFO) log.log(Log.LEVEL_INFO, "cftrace", "httpRequest [" + method + "] to [" + url + "], returned ["
-				+ data.get(STATUSCODE) + "] in " + (executionTimeNS / 1000000) + "ms, " + (cached ? "(cached response)" : "") + " at " + CallStackGet.call(pc, "text"));
+		Log log = ThreadLocalPageContext.getLog(pc, "application");
+		if (log != null) log.log(Log.LEVEL_TRACE, "cftrace", "httpRequest [" + method + "] to [" + url + "], returned [" + data.get(STATUSCODE) + "] in "
+				+ (executionTimeNS / 1000000) + "ms, " + (cached ? "(cached response)" : "") + " at " + CallStackGet.call(pc, "text"));
 	}
 
 	@Override
@@ -1686,6 +1698,13 @@ public final class Http extends BodyTagImpl {
 	 */
 	public void setAddtoken(boolean addtoken) {
 		this.addtoken = addtoken;
+	}
+
+	/**
+	 * @param encode encode the URL
+	 */
+	public void setEncode(boolean encode) {
+		this.encode = encode;
 	}
 
 	/**
